SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")		
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g3")	
SET(CMAKE_CXX_FLAGS " -Wall")
#include_directories(${comm_utils_source_dir}/hdr)
aux_source_directory(./common/ SRC_FILES)
aux_source_directory(./delegate/ SRC_FILES)
aux_source_directory(./memory/ SRC_FILES)
aux_source_directory(./log/ SRC_FILES)
aux_source_directory(./utils/ SRC_FILES)
aux_source_directory(./thread/ SRC_FILES)
add_library(comm_utils STATIC ${SRC_FILES})
target_link_libraries(comm_utils pthread)
