SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")		
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g3")	
SET(CMAKE_CXX_FLAGS " -Wall")
include_directories(../../libcomm_utils/src/)
include_directories(../../libcomm_net/src/)
aux_source_directory(./common/ SRC_FILES)
aux_source_directory(./framework/ SRC_FILES)
aux_source_directory(./smart_net/ SRC_FILES)
add_library(smart_net STATIC ${SRC_FILES})
target_link_libraries(smart_net pthread)
